Replacing Stream#toList with Stream#collect(Collectors.toList())