@@ -7,6 +7,7 @@ import gg.discord.tj.bot.command.CommandExecutionContext;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 public class TagListCommand
     implements Command
@@ -27,7 +28,10 @@ public class TagListCommand
     public void onExecute(CommandExecutionContext context)
     {
         Objects.requireNonNull(context.getMessage().getChannel().block())
-                .createMessage("All available tags:\n" + String.join(", ", Application.BOT_INSTANCE.getAvailableTags().keySet().stream().sorted().toList()))
+                .createMessage("All available tags:\n" + String.join(", ", Application.BOT_INSTANCE
+                        .getAvailableTags().keySet().stream()
+                        .sorted()
+                        .collect(Collectors.toList())))
                 .block();
     }
 }
